--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>luka.space</title>
+	<link rel="icon" href="images/loader.gif" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Nothing much" />
+	<meta name="keywords" content="devops,sre,mlops" />
 	<meta name="author" content="freehtml5.co" />
 
 	<!-- 
@@ -94,7 +95,7 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Luka Kröger</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@luka.cloud</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">info@luka.space</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
